--- a/style/style.css
+++ b/style/style.css
@@ -129,3 +129,51 @@ div.tooltip:hover {
 #event .button.disabled:hover > div.tooltip {
 	display: block;
 }
+
+#chat-wrapper {
+	position: absolute;
+	top: 0;
+	right: 0;
+	display: flex;
+	flex-direction: row-reverse;
+}
+
+#chat-content {
+	background: white;
+	border: 1px solid black;
+	width: 320px;
+	height: 480px;
+	z-index: 100;
+}
+
+#chat-area {
+	height: 100%;
+	padding-bottom: 60px;
+}
+
+#chat-messages {
+	height: 460px;
+	margin: 0;
+	overflow-y: scroll;
+	padding: 10px 20px 10px 20px;
+	list-style: none;
+	word-wrap: break-word;
+}
+
+.username {
+	font-weight: 700;
+	overflow: hidden;
+	padding-right: 15px;
+	text-align: right;
+}
+
+#inputMessage {
+	border: 1px solid #000;
+	bottom: 0;
+	height: 60px;
+	left: 0;
+	outline: none;
+	padding-left: 10px;
+	position: absolute;
+	width: 275px;
+}
